--- a/evenframe/Cargo.toml
+++ b/evenframe/Cargo.toml
@@ -24,3 +24,4 @@ chrono-tz = { workspace = true }
 derive_more = { workspace = true }
 petgraph = { workspace = true }
 toml = { workspace = true }
+evcxr = { workspace = true }
