Squashed commit of the following:
commit 861379a1007637dc16b0873cf5b8c57e8adfafff
Author: jakobloch <38576440+jakobloch@users.noreply.github.com>
Date:   Sun Aug 10 12:47:06 2025 -0400

    refactored parse type, added recursion detection

--- a/evenframe/Cargo.toml
+++ b/evenframe/Cargo.toml
@@ -36,3 +36,4 @@ axum = { workspace = true }
 ordered-float = { version = "5.0.0", features = ["serde"] }
 syn_enum_derive = { path = "../syn_enum_derive" }
 serde-value = { workspace = true }
+thiserror = { workspace = true }
