--- a/evenframe_derive/Cargo.toml
+++ b/evenframe_derive/Cargo.toml
@@ -1,18 +1,22 @@
 [package]
-name = "evenframe_derive" # Name of your crate
+name = "evenframe_derive"
 version = "0.1.0"
-edition = "2021"          # Recommended edition (2021 is the latest as of now)
+edition = "2024"
 
 [lib]
-proc-macro = true # Enables procedural macro functionality
+proc-macro = true
 
 [dependencies]
-proc-macro2 = { workspace = true }
-quote = { workspace = true }          # For generating Rust code
-syn = { workspace = true }            # For parsing Rust code
-evenframe = { path = "../evenframe" }
-serde_json.workspace = true
+
+# workspace dependencies
+serde_json = { workspace = true }
 regex = { workspace = true }
+
+proc-macro2 = "1.0.95"
+quote = "1.0.40"
+syn = { version = "2.0.104", features = ["full"] }
+evenframe = { path = "../evenframe" }
+
 
 [features]
 default = []
