--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
-members = ["common", "evenframe", "evenframe_derive"]
+members = ["evenframe_core", "evenframe", "evenframe_derive"]
 resolver = "2"
 
 [workspace.dependencies]
-try_from_expr = { path = "../try_from_expr/try_from_expr" }
-common = { path = "common" }
+try_from_expr = { version = "*", path = "../try_from_expr/try_from_expr" }
+evenframe_core = { path = "evenframe_core" }
 serde_json = "1.0.142"
 regex = "1.11.1"
 syn = { version = "2.0.104", features = ["full"] }
