--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ syn = { version = "2.0.104", features = ["full"] }
 tracing = "0.1.41"
 convert_case = "0.7.1"
 tokio = { version = "1.47.1", features = ["full"] }
+toml = "0.9.5"
