--- a/evenframe/Cargo.toml
+++ b/evenframe/Cargo.toml
@@ -24,6 +24,10 @@ tracing = { workspace = true }
 convert_case = { workspace = true }
 tokio = { workspace = true }
 regex = { workspace = true }
+toml = { workspace = true }
 
+
+dotenv = "0.15.0"
 evenframe_derive = { version = "0.1.0", path = "../evenframe_derive" }
 tracing-subscriber = "0.3"
+walkdir = "2.5.0"
